--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -2,6 +2,411 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happiness19 = \"Resources/happiness19.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happiness_df = pd.read_csv(happiness19, encoding=\"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Overall rank</th>\n",
+       "      <th>Country or region</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>GDP per capita</th>\n",
+       "      <th>Social support</th>\n",
+       "      <th>Healthy life expectancy</th>\n",
+       "      <th>Freedom to make life choices</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Perceptions of corruption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>7.769</td>\n",
+       "      <td>1.340</td>\n",
+       "      <td>1.587</td>\n",
+       "      <td>0.986</td>\n",
+       "      <td>0.596</td>\n",
+       "      <td>0.153</td>\n",
+       "      <td>0.393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>7.600</td>\n",
+       "      <td>1.383</td>\n",
+       "      <td>1.573</td>\n",
+       "      <td>0.996</td>\n",
+       "      <td>0.592</td>\n",
+       "      <td>0.252</td>\n",
+       "      <td>0.410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>7.554</td>\n",
+       "      <td>1.488</td>\n",
+       "      <td>1.582</td>\n",
+       "      <td>1.028</td>\n",
+       "      <td>0.603</td>\n",
+       "      <td>0.271</td>\n",
+       "      <td>0.341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>7.494</td>\n",
+       "      <td>1.380</td>\n",
+       "      <td>1.624</td>\n",
+       "      <td>1.026</td>\n",
+       "      <td>0.591</td>\n",
+       "      <td>0.354</td>\n",
+       "      <td>0.118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>7.488</td>\n",
+       "      <td>1.396</td>\n",
+       "      <td>1.522</td>\n",
+       "      <td>0.999</td>\n",
+       "      <td>0.557</td>\n",
+       "      <td>0.322</td>\n",
+       "      <td>0.298</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Overall rank Country or region  Score  GDP per capita  Social support  \\\n",
+       "0             1           Finland  7.769           1.340           1.587   \n",
+       "1             2           Denmark  7.600           1.383           1.573   \n",
+       "2             3            Norway  7.554           1.488           1.582   \n",
+       "3             4           Iceland  7.494           1.380           1.624   \n",
+       "4             5       Netherlands  7.488           1.396           1.522   \n",
+       "\n",
+       "   Healthy life expectancy  Freedom to make life choices  Generosity  \\\n",
+       "0                    0.986                         0.596       0.153   \n",
+       "1                    0.996                         0.592       0.252   \n",
+       "2                    1.028                         0.603       0.271   \n",
+       "3                    1.026                         0.591       0.354   \n",
+       "4                    0.999                         0.557       0.322   \n",
+       "\n",
+       "   Perceptions of corruption  \n",
+       "0                      0.393  \n",
+       "1                      0.410  \n",
+       "2                      0.341  \n",
+       "3                      0.118  \n",
+       "4                      0.298  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "happiness_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "internet_data= \"Resources/internet.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mason\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "internet_df=pd.read_csv(internet_data, header=None, sep='/n')\n",
+    "internet_df=internet_df[0].str.split(',', expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>57</th>\n",
+       "      <th>58</th>\n",
+       "      <th>59</th>\n",
+       "      <th>60</th>\n",
+       "      <th>61</th>\n",
+       "      <th>62</th>\n",
+       "      <th>63</th>\n",
+       "      <th>64</th>\n",
+       "      <th>65</th>\n",
+       "      <th>66</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ï»¿\"Data Source\"</td>\n",
+       "      <td>\"World Development Indicators\"</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"Last Updated Date\"</td>\n",
+       "      <td>\"2020-12-16\"</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"Country Name\"</td>\n",
+       "      <td>\"Country Code\"</td>\n",
+       "      <td>\"Indicator Name\"</td>\n",
+       "      <td>\"Indicator Code\"</td>\n",
+       "      <td>\"1960\"</td>\n",
+       "      <td>\"1961\"</td>\n",
+       "      <td>\"1962\"</td>\n",
+       "      <td>\"1963\"</td>\n",
+       "      <td>\"1964\"</td>\n",
+       "      <td>\"1965\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>\"2013\"</td>\n",
+       "      <td>\"2014\"</td>\n",
+       "      <td>\"2015\"</td>\n",
+       "      <td>\"2016\"</td>\n",
+       "      <td>\"2017\"</td>\n",
+       "      <td>\"2018\"</td>\n",
+       "      <td>\"2019\"</td>\n",
+       "      <td>\"2020\"</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"Aruba\"</td>\n",
+       "      <td>\"ABW\"</td>\n",
+       "      <td>\"Individuals using the Internet (% of populati...</td>\n",
+       "      <td>\"IT.NET.USER.ZS\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>\"78.9\"</td>\n",
+       "      <td>\"83.78\"</td>\n",
+       "      <td>\"88.6612\"</td>\n",
+       "      <td>\"93.5425\"</td>\n",
+       "      <td>\"97.17\"</td>\n",
+       "      <td>\"97.17\"</td>\n",
+       "      <td>\"97.17\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"Afghanistan\"</td>\n",
+       "      <td>\"AFG\"</td>\n",
+       "      <td>\"Individuals using the Internet (% of populati...</td>\n",
+       "      <td>\"IT.NET.USER.ZS\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>\"5.9\"</td>\n",
+       "      <td>\"7\"</td>\n",
+       "      <td>\"8.26\"</td>\n",
+       "      <td>\"11.2\"</td>\n",
+       "      <td>\"13.5\"</td>\n",
+       "      <td>\"13.5\"</td>\n",
+       "      <td>\"13.5\"</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 67 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0                               1   \\\n",
+       "0     ï»¿\"Data Source\"  \"World Development Indicators\"   \n",
+       "1  \"Last Updated Date\"                    \"2020-12-16\"   \n",
+       "2       \"Country Name\"                  \"Country Code\"   \n",
+       "3              \"Aruba\"                           \"ABW\"   \n",
+       "4        \"Afghanistan\"                           \"AFG\"   \n",
+       "\n",
+       "                                                  2                 3   \\\n",
+       "0                                                                 None   \n",
+       "1                                                                 None   \n",
+       "2                                   \"Indicator Name\"  \"Indicator Code\"   \n",
+       "3  \"Individuals using the Internet (% of populati...  \"IT.NET.USER.ZS\"   \n",
+       "4  \"Individuals using the Internet (% of populati...  \"IT.NET.USER.ZS\"   \n",
+       "\n",
+       "       4       5       6       7       8       9   ...      57       58  \\\n",
+       "0    None    None    None    None    None    None  ...    None     None   \n",
+       "1    None    None    None    None    None    None  ...    None     None   \n",
+       "2  \"1960\"  \"1961\"  \"1962\"  \"1963\"  \"1964\"  \"1965\"  ...  \"2013\"   \"2014\"   \n",
+       "3      \"\"      \"\"      \"\"      \"\"      \"\"      \"\"  ...  \"78.9\"  \"83.78\"   \n",
+       "4      \"\"      \"\"      \"\"      \"\"      \"\"      \"\"  ...   \"5.9\"      \"7\"   \n",
+       "\n",
+       "          59         60       61       62       63      64    65    66  \n",
+       "0       None       None     None     None     None    None  None  None  \n",
+       "1       None       None     None     None     None    None  None  None  \n",
+       "2     \"2015\"     \"2016\"   \"2017\"   \"2018\"   \"2019\"  \"2020\"        None  \n",
+       "3  \"88.6612\"  \"93.5425\"  \"97.17\"  \"97.17\"  \"97.17\"      \"\"        None  \n",
+       "4     \"8.26\"     \"11.2\"   \"13.5\"   \"13.5\"   \"13.5\"      \"\"        None  \n",
+       "\n",
+       "[5 rows x 67 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "internet_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -24,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
