wrote the final dataframe to a text file and import and read the text file to the analysis notebook

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -311,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -470,6 +472,15 @@
    ],
    "source": [
     "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv('merged.tsv', sep='\\t')"
    ]
   },
   {
