Adding in line graphs for average happiness score/internet users

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -243,6 +243,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find averages for happiness scores for each year\n",
+    "happiness_2015 = df[\"Happiness Score_2015\"].mean()\n",
+    "happiness_2016 = df[\"Happiness Score_2016\"].mean()\n",
+    "happiness_2017 = df[\"Happiness.Score_2017\"].mean()\n",
+    "happiness_2018 = df[\"Score_2018\"].mean()\n",
+    "happiness_2019 = df[\"Score_2019\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create x and y axis\n",
+    "years = [\"2015\", \"2016\", \"2017\", \"2018\", \"2019\"]\n",
+    "average_happiness_scores = [happiness_2015, happiness_2016, happiness_2017, happiness_2018, happiness_2019]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create line chart showing the average happiness score per year\n",
+    "average_happiness = plt.plot(years, average_happiness_scores, marker=\"o\")\n",
+    "\n",
+    "plt.title(\"Average Happiness Score Per Year\")\n",
+    "plt.xlabel(\"Years\")\n",
+    "plt.ylabel(\"Average Happiness Scores\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find average percentage of internet users for each year\n",
+    "internet_users_2015 = df[\"Internet_2015\"].mean()\n",
+    "internet_users_2016 = df[\"Internet_2016\"].mean()\n",
+    "internet_users_2017 = df[\"Internet_2017\"].mean()\n",
+    "internet_users_2018 = df[\"Internet_2018\"].mean()\n",
+    "internet_users_2019 = df[\"Internet_2019\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create x and y axis\n",
+    "years = [\"2015\", \"2016\", \"2017\", \"2018\", \"2019\"]\n",
+    "average_internet_users = [internet_users_2015, internet_users_2016, internet_users_2017, internet_users_2018, internet_users_2019]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create line chart showing the average percentage of internet users per year\n",
+    "average_internet_users = plt.plot(years, average_internet_users, marker=\"o\")\n",
+    "\n",
+    "plt.title(\"Average Percentage of Internet Users Per Year\")\n",
+    "plt.xlabel(\"Years\")\n",
+    "plt.ylabel(\"Average Percentage of Internet Users\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Rebecca's code ends here"
    ]
   },
@@ -473,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
