Added some analysis

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -203,6 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Overall score vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['Score_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
@@ -219,11 +220,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and overall happiness score shows a positve, linear, and strong relationship. The correlation coefficient of 0.77 is statistically significant with a p-value of 2.75e-26. The slope of the regression line shows that as internet usage increases by 1 percent, the overall happiness score increases by 0.03 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of GDP per Capita vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['GDP per capita_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
@@ -240,11 +249,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and gross domestic product per capita score shows a positve, linear, and strong relationship. The correlation coefficient of 0.91 is statistically significant with a p-value of 1.32e-50. The slope of the regression line shows that as internet usage increases by 1 percent, the gross domestic product per capita score increases by 0.01 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Social Support vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['Social support_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
@@ -261,11 +278,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and social support score shows a positve, linear, and strong relationship. The correlation coefficient of 0.74 is statistically significant with a p-value of 5.75e-23. The slope of the regression line shows that as internet usage increases by 1 percent, the social support score increases by 0.01 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Healthy Life Expectancy vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['Healthy life expectancy_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
@@ -282,20 +307,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and healthy life expectancy score shows a positve, linear, and strong relationship. The correlation coefficient of 0.85 is statistically significant with a p-value of 7.81e-37. The slope of the regression line shows that as internet usage increases by 1 percent, the healthy life expectancy score increases by 0.01 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Freedom to Make Life Choices vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['Freedom to make life choices_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
     "regress_values = x_values * slope + intercept\n",
-    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,2)) + \"x\"\n",
+    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,4)) + \"x\"\n",
     "print(f\"The r-value is {rvalue} with a p-value of {pvalue}.\")\n",
     "plt.scatter(x_values,y_values,edgecolor = 'black')\n",
     "plt.plot(x_values,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(60,0),fontsize=15,color=\"red\")\n",
+    "plt.annotate(line_eq,(55,0),fontsize=15,color=\"red\")\n",
     "plt.xlabel('Internet Users by %')\n",
     "plt.ylabel('Freedom to Make Life Choices')\n",
     "plt.savefig('output_data/freedom_regess.png')\n",
@@ -303,20 +336,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and freedom to make life choices score shows a positve but weak relationship. The correlation coefficient of 0.34 is statistically significant with a p-value of 0.0001. The slope of the regression line shows that as internet usage increases by 1 percent, the freedom to make life choices score increases by 0.0016 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Generosity vs. Internet Users by %\n",
     "x_values = df['Internet_2019']\n",
     "y_values = df['Generosity_2019']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
     "regress_values = x_values * slope + intercept\n",
-    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,2)) + \"x\"\n",
+    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,4)) + \"x\"\n",
     "print(f\"The r-value is {rvalue} with a p-value of {pvalue}.\")\n",
     "plt.scatter(x_values,y_values,edgecolor = 'black')\n",
     "plt.plot(x_values,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(60,0.5),fontsize=15,color=\"red\")\n",
+    "plt.annotate(line_eq,(55,0.5),fontsize=15,color=\"red\")\n",
     "plt.xlabel('Internet Users by %')\n",
     "plt.ylabel('Generosity')\n",
     "plt.savefig('output_data/generosity_regess.png')\n",
@@ -324,24 +365,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x_values = df['Internet_2019']\n",
-    "y_values = df['Perceptions of corruption_2019']\n",
-    "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
-    "regress_values = x_values * slope + intercept\n",
-    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,2)) + \"x\"\n",
-    "print(f\"The r-value is {rvalue} with a p-value of {pvalue}.\")\n",
-    "plt.scatter(x_values,y_values,edgecolor = 'black')\n",
-    "plt.plot(x_values,regress_values,\"r-\")\n",
-    "plt.annotate(line_eq,(40,0.4),fontsize=15,color=\"red\")\n",
-    "plt.xlabel('Internet Users by %')\n",
-    "plt.ylabel('Perceptions of Corruption')\n",
-    "plt.savefig('output_data/trust_regess.png')\n",
-    "plt.show()"
+    "The linear regression for internet users and generosity score shows a negative and weak/no relationship. The correlation coefficient of -0.11 is not significant with a p-value of 0.21. We do not have evidence that there is association between internet users and generosity score."
    ]
   },
   {
@@ -350,6 +377,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression of Perceptions of Corruption vs. Internet Users by %\n",
+    "x_values = df['Internet_2019']\n",
+    "y_values = df['Perceptions of corruption_2019']\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
+    "regress_values = x_values * slope + intercept\n",
+    "line_eq = \"y = \" + str(round(intercept,2)) + \" + \" + str(round(slope,4)) + \"x\"\n",
+    "print(f\"The r-value is {rvalue} with a p-value of {pvalue}.\")\n",
+    "plt.scatter(x_values,y_values,edgecolor = 'black')\n",
+    "plt.plot(x_values,regress_values,\"r-\")\n",
+    "plt.annotate(line_eq,(35,0.4),fontsize=15,color=\"red\")\n",
+    "plt.xlabel('Internet Users by %')\n",
+    "plt.ylabel('Perceptions of Corruption')\n",
+    "plt.savefig('output_data/trust_regess.png')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression for internet users and perception of corruption score shows a positve but weak relationship. The correlation coefficient of 0.31 is statistically significant with a p-value of 0.0004. The slope of the regression line shows that as internet usage increases by 1 percent, the perception of corruption score increases by 0.0011 points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataFrame with only 2019  \n",
     "df_2019 = df[['Country', 'Score_2019', 'Social support_2019', 'GDP per capita_2019', 'Healthy life expectancy_2019', 'Freedom to make life choices_2019', 'Generosity_2019', 'Perceptions of corruption_2019', 'Internet_2019']]\n",
     "df_2019 = df_2019.rename(columns = {'Country': 'Country','Score_2019':'Score', 'Social support_2019':'Social', 'GDP per capita_2019':'GDP', 'Healthy life expectancy_2019':'Health', 'Freedom to make life choices_2019':'Freedom', 'Generosity_2019':'Generosity', 'Perceptions of corruption_2019':'Trust', 'Internet_2019':'Users'})\n",
     "df_2019.head()"
@@ -361,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scatterplot matrix\n",
+    "# scatterplot matrix of 2019 showing every category versus each other\n",
     "pd.plotting.scatter_matrix(df_2019, figsize = (15,10))"
    ]
   },
@@ -831,6 +888,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Analysis and Summary\n",
+    "\n",
+    "# Is there a correlation between a country's level of happiness and percentage of internet users? Does a country's happiness decrease as the percentage of internet users increase?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Looking at the six factors analyzed in a country's happiness score, is there a relationship between a country's score and percentage of internet users?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -854,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
