Added descriptions of code in Daniel's section

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -591,15 +591,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Box and Whisker plots of Happiness across years\n",
     "happiness_scores = [df[\"Happiness Score_2015\"],\n",
     "                   df[\"Happiness Score_2016\"],\n",
@@ -616,6 +607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This box and whisker plot shows the distribution of happiness scores over the course of five years. While most appear nearly identical, 2019 does show slight differences. The median values are also very close to the mean values found previously, showing that the spread of the data is not significantly skewed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -627,6 +625,13 @@
     "              df[\"Happiness.Score_2017\"],\n",
     "              df[\"Score_2018\"],\n",
     "              df[\"Score_2019\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To determine whether 2019 (or any particular year) has a significantly different mean value, we also ran an ANOVA test on all the years. The p-value of 0.9656 indicates that we cannot reject the hypothesis that these years had similar means, and we cannot conclude that any year's happiness scores were significantly different from another year."
    ]
   },
   {
@@ -651,6 +656,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, we created a box and whisker plot of the internet usage across five years. These results show what appears to be a general increase in the median value over time (a similar trend to the increasing mean values over time). The median values are higher, and we do see a larger 2nd quartile than 3rd quartile each year, which is consistently showing a skew toward more countries with a small percentage of users."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -662,6 +674,13 @@
     "              df[\"Internet_2017\"],\n",
     "              df[\"Internet_2018\"],\n",
     "              df[\"Internet_2019\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To examine the hypothesis that there actually is a significant difference in internet users for specific years, we ran an ANOVA test with the internet usage data. With a p-value of 0.0563 we just barely failed to reject the null hypothesis, meaning we cannot conclude a significant difference across these five years."
    ]
   },
   {
@@ -704,13 +723,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Moving forward with 2019 data\n",
-    "df_2019.head()"
+    "Because the p-value was so close to being able to reject the null hypothesis in the ANOVA test for internet usage, we did explore what it would look like to omit a year's data. When removing 2016, 2017, or 2018, we did see a smaller p-value, indicating that there would be significant differences between those datasets.\n",
+    "\n",
+    "We decided since it was so close, we would not explore the data further through combining all the years of data, but restrict our study to the single year of data that we saw above."
    ]
   },
   {
@@ -722,6 +740,13 @@
     "# Subtract leading subscores with high correlations (GDP, Social Support, Health Care)\n",
     "df_2019[\"Modified Score\"] = (df_2019[\"Score\"]) - (df_2019[\"Social\"]) - (df_2019[\"GDP\"]) - (df_2019[\"Health\"])\n",
     "df_2019.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We created a \"modified happiness score\" by taking out some of the factors that were also correlated with internet usage (GDP, Social Support, Health) to see if we could isolate the effect of internet usage on the Happiness Score. We can do this by simply subtracting those from the overall score (since the Happiness Score is defined as the sum of the six subscores)."
    ]
   },
   {
@@ -748,34 +773,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Regardless, potentially look at binning by internet users to do hypothesis testing/deeper correlations"
+    "In removing those factors, we found an extremely low r-value, indicating almost no relationship between internet usage and the remaining factors of Happiness, further supporting the results we had already found."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -797,6 +799,13 @@
     "# Just looking at countries with a percentage of users greater than or equal to 50%\n",
     "above_50 = df[df[\"Internet_2019\"] >= 50]\n",
     "above_50[\"Country\"].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the data for internet usage did appear to be bi-modal, we decided to examine countries in two groups (those with a majority of their population using the internet and those with a minority of their population using the internet). We found 45 countries with less than 50% internet usage, and 81 countries with above 50% internet usage."
    ]
   },
   {
@@ -840,6 +849,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In looking at the correlation with Happiness Score for these two subsets, we see a minor correlation (r-value of 0.3351) for countries with less than 50% internet usage, and a stronger correlation (r-value of 0.6607) for countries with higher than 50% internet usage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -876,6 +892,13 @@
     "\n",
     "plt.savefig(\"output_data/generosity_vs_internet_above_below_50.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The other subscore that looked like it could have a big difference for countries with less than or greater than 50% internet usage was Generosity. While the overall correlation (including all countries) was slightly negative– but very weak– we did see a minor correlation between generosity and internet usage in countries with a majority of users having access to the internet (r-value of 0.3836)."
    ]
   },
   {
@@ -927,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
