Adding Analysis for line graphs

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -480,7 +480,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create line chart showing the average happiness score per year\n",
     "average_happiness = plt.plot(years, average_happiness_scores, marker=\"o\")\n",
     "\n",
     "plt.ylim(0,8)\n",
@@ -509,12 +508,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above line graph showcases the average happiness scores globally from 2015 to 2019. Illustrated by this line graph, year over year there is not a significant increase in average happiness scores. Shown in the DataFrame above, the average scores increased very slightly. This suggests that year over year, average happiness does not vary vastly. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find average percentage of internet users for each year\n",
+    "# Find average percentage of Internet users for each year\n",
     "internet_users_2015 = df[\"Internet_2015\"].mean()\n",
     "internet_users_2016 = df[\"Internet_2016\"].mean()\n",
     "internet_users_2017 = df[\"Internet_2017\"].mean()\n",
@@ -539,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create line chart showing the average percentage of internet users per year\n",
+    "# Create line chart showing the average percentage of Internet users per year\n",
     "average_internet_users = plt.plot(years, average_internet_users, marker=\"o\")\n",
     "\n",
     "plt.ylim(0,100)\n",
@@ -565,6 +571,13 @@
     "# Create the pandas DataFrame showing the average internet users per year\n",
     "average_internet_scores = pd.DataFrame(data, columns = ['2015', \"2016\", \"2017\", \"2018\", \"2019\"]) \n",
     "average_internet_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above line graph shows the average percentage of Internet users globally from 2015 to 2019. Illustrated by this line graph, from 2015 to 2019 there was a slight increase in average percentage of Internet users. The DataFrame above is used to show the averages year over year. From 2015 to 2019, there was a 18% increase in average number of Internet users."
    ]
   },
   {
