--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -929,14 +929,19 @@
    "source": [
     "# Data Analysis and Summary\n",
     "\n",
-    "# Is there a correlation between a country's level of happiness and percentage of internet users? Does a country's happiness decrease as the percentage of internet users increase?"
+    "# Is there a correlation between a country's level of happiness and percentage of internet users? Does a country's happiness decrease as the percentage of internet users increase?\n",
+    "\n",
+    "We have found that there is a correlation between a country's level of happiness and percentage of internet users in that country. With an r-value of 0.77, we have a strong, positive association between the overall happiness score and the percentage of internet users, p-value = 2.75e-26. A countries happiness does not decrease as the percentage of internet users increases. Based on the linear regression model, the overall happiness score increases 0.03 points\n",
+    "as the percentage of internet use increases by one percent. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Looking at the six factors analyzed in a country's happiness score, is there a relationship between a country's score and percentage of internet users?"
+    "# Looking at the six factors analyzed in a country's happiness score, is there a relationship between a country's score and percentage of internet users?\n",
+    "\n",
+    "Looking at the six factors analyzed in a country's happiness score, we found that three of factors have a strong association and three have a weak or no association with the percentage of internet users in a country. GDP per capita, social support, and healthy life expectancy all had correlation coefficients above 0.7 indicating they are strongly associated with internet usage. Freedom to make life choices and perception of corruptions each were weakly, yet positively, associated with internet usage, with correlation coefficients of 0.34 and 0.31 respectively. Generosity was found to have no association with internet usage. "
    ]
   },
   {
