Finalized Analysis Discussion

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -929,34 +929,28 @@
    "source": [
     "# Data Analysis and Summary\n",
     "\n",
-    "# Is there a correlation between a country's level of happiness and percentage of internet users? Does a country's happiness decrease as the percentage of internet users increase?\n",
+    "## Is there a correlation between a country's level of happiness and percentage of internet users? Does a country's happiness decrease as the percentage of internet users increase?\n",
     "\n",
     "We have found that there is a correlation between a country's level of happiness and percentage of internet users in that country. With an r-value of 0.77, we have a strong, positive association between the overall happiness score and the percentage of internet users, p-value = 2.75e-26. A countries happiness does not decrease as the percentage of internet users increases. Based on the linear regression model, the overall happiness score increases 0.03 points\n",
-    "as the percentage of internet use increases by one percent. "
+    "as the percentage of internet use increases by one percent.\n",
+    "\n",
+    "When looking at changes over time (2015 – 2019), our ANOVA testing showed that there was no significant change between the average happiness scores globally (p-value of 0.96), but there was a significant difference between some of the years in percentage of internet users (some p-values below 0.05). A closer analysis and a survey of additional years might be needed to form a solid conclusion, but this makes it more complicated to link internet usage and happiness score directly.\n",
+    "\n",
+    "We also learned that for countries with a majority of their population using the internet, there was a stronger correlation than for countries with a minority of their population using the internet (r-value of 0.66 compared to 0.34)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Looking at the six factors analyzed in a country's happiness score, is there a relationship between a country's score and percentage of internet users?\n",
+    "## Looking at the six factors analyzed in a country's happiness score, is there a relationship between a country's score and percentage of internet users?\n",
     "\n",
-    "Looking at the six factors analyzed in a country's happiness score, we found that three of factors have a strong association and three have a weak or no association with the percentage of internet users in a country. GDP per capita, social support, and healthy life expectancy all had correlation coefficients above 0.7 indicating they are strongly associated with internet usage. Freedom to make life choices and perception of corruptions each were weakly, yet positively, associated with internet usage, with correlation coefficients of 0.34 and 0.31 respectively. Generosity was found to have no association with internet usage. "
+    "Looking at the six factors analyzed in a country's happiness score, we found that three of factors have a strong association and three have a weak or no association with the percentage of internet users in a country. GDP per capita, social support, and healthy life expectancy all had correlation coefficients above 0.7 indicating they are strongly associated with internet usage. Freedom to make life choices and perception of corruptions each were weakly, yet positively, associated with internet usage, with correlation coefficients of 0.34 and 0.31 respectively. Generosity was found to have no association with internet usage.\n",
+    "\n",
+    "When attempting to isolate some of these variables by subtracting the components of the Happiness Score that were highly correlated, we did not find any correlation to the \"modified\" happiness score. This strengthens the idea that internet usage is more directly related to GDP, Social Support, or Health in a country, which in turn adds to the country's happiness score. Causation is not clear in these relationships– a higher GDP could mean internet access is more affordable, or the population have more free time to use the internet at home, for example.\n",
+    "\n",
+    "Finally, when examining Generosity more closely (using the 50% subdivision by internet usage), we did see a positive and weak/minor correlation with internet usage, suggesting that there may be different impacts based on what society's use of the internet looks like as a whole."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -975,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
